# DriftGuard

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RESEARCH.md  SUMMARY.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backend.yml  frontend.yml  fuzz.yml  supply-chain.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  dependencies.py  errors.py  health_routes.py  middleware.py  rate_limit.py  recovery_routes.py  report_routes.py  routes.py  scenario_routes.py  schemas.py  stream_routes.py
backend/app/core/: canonical.py  config.py  cors.py  exceptions.py  fault_dsl.py  ids.py  logging_setup.py  metrics.py  rng.py  time.py  tracing.py
backend/app/domain/: enums.py  events.py  models.py
backend/app/persistence/: database.py  repository.py  repository_serialization.py  repository_writes.py
backend/app/reporting/: __init__.py  mission_report.py  risk.py  summary.py
backend/app/scenarios/: __init__.py  builtins.py  loader.py  models.py  registry.py  schema.yaml
backend/app/simulation/: anomaly.py  anomaly_sidecar.py  controller_fault_application.py  controllers.py  detection.py  event_logger.py  faults.py  gps.py  health.py  ins.py  navigation.py  orchestrator.py  orchestrator_decision.py  orchestrator_logging.py  orchestrator_metrics.py  safe_mode.py  sensors.py  vehicle.py  voting.py
backend/app/simulation/dynamics/: __init__.py  integrator.py
backend/app/simulation/filtering/: __init__.py  ekf.py
backend/app/simulation/missions/: __init__.py  builtins.py  models.py
backend/app/tests/: conftest.py  test_advanced_faults.py  test_anomaly_detector.py  test_anomaly_firewall.py  test_anomaly_scenarios.py  test_api.py  test_auth.py  test_canonical_serialization.py  test_causality_fields.py  test_causality_replay.py  test_clock.py  test_controllers.py  test_cors.py  test_db_path_env.py  test_determinism.py  test_dynamics_integration.py  test_dynamics_integrator.py  test_dynamics_primitives.py  test_ekf.py  test_error_taxonomy.py  test_event_order.py  test_fault_detection.py  test_fault_dsl.py  test_gps.py  test_health_detector.py  test_health_routes.py  test_ins.py  test_invalid_inputs.py  test_lru_registry.py  test_metrics.py  test_metrics_endpoint.py  test_missions.py  test_navigation_pipeline.py  test_rate_limit.py  test_recovery_api.py  test_replay_fingerprint.py  test_report.py  test_repository_clock.py  test_repository_recovery.py  test_request_id_middleware.py  (+22 more)
backend/app/tests/fuzz/: test_orchestrator_no_escape.py
backend/app/tests/properties/: strategies.py  test_invariant_11_hysteresis.py  test_invariants.py  test_transition_exhaustive.py
docs/: API.md  ARCHITECTURE_DIAGRAM.md  BACKLOG.md  BUILD_NOTES.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DETERMINISM.md  FAULT_MODEL.md  INVARIANTS.md  OBSERVABILITY.md  PHYSICS.md  PORTFOLIO_CASE_STUDY.md  RAILWAY_DEPLOY.md  SCENARIOS.md
docs/adr/: 0000-template.md  0001-dual-fault-detectors.md  0002-majority-voting.md  0003-sqlite-not-postgres.md  (+9 more)
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  railway.toml  tailwind.config.ts  vitest.config.ts
(+92 files in other folders)
