[project]
name = "driftguard-backend"
version = "0.2.0"
description = "Deterministic, fault-tolerant control system simulation."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["**/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "PT"]
# UP042 (StrEnum migration) deferred — it's a meaningful behavior change
# that needs a separate audit (pickle / JSON / equality semantics).
# B007 / PT011 are test ergonomics we're keeping as-is for now.
ignore = [
    "E501",   # let formatter handle line length
    "UP042",  # StrEnum migration deferred
    "B007",   # unused loop var (intentional in some iteration helpers)
    "PT011",  # broad pytest.raises; messages covered separately
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true
# Strict mode is opt-in for new modules. Listed below are modules
# already audited; add new files here as they are written or refactored.
[[tool.mypy.overrides]]
module = [
    "app.core.exceptions",
    "app.core.ids",
    "app.core.time",
    "app.domain.enums",
    "app.domain.events",
    "app.domain.models",
]
strict = true

[tool.bandit]
# B101: assert is fine in test files
# B311: deterministic non-crypto RNG is a load-bearing design property
#       (replay, fuzz reproducibility, ADR 0006). Cryptographic randomness
#       would actively break the simulation contract.
skips = ["B101", "B311"]
exclude_dirs = ["app/tests"]

[tool.pytest.ini_options]
addopts = ["-q", "-m", "not slow"]
testpaths = ["app/tests"]
markers = [
    "slow: long-running tests (fuzz, soak); excluded from default run. Run with `pytest -m slow`.",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
